--- a/index.html
+++ b/index.html
@@ -18,5 +18,34 @@
       <a href="" download="my_painting.png">Download my painting</a
       ><i class="fa fa-refresh refresh-btn"><strong>Clear</strong></i>
     </p>
+    <div id="pen-tools" class="pen-tools">
+      <div id="drawing-colors" class="drawing-colors">
+        <div
+          class="color-circle active"
+          data-color="hotpink"
+          onclick="selectColor(this)"
+        ></div>
+        <div
+          class="color-circle"
+          data-color="orange"
+          onclick="selectColor(this)"
+        ></div>
+        <div
+          class="color-circle"
+          data-color="red"
+          onclick="selectColor(this)"
+        ></div>
+        <div
+          class="color-circle"
+          data-color="yellow"
+          onclick="selectColor(this)"
+        ></div>
+        <div
+          class="color-circle"
+          data-color="black"
+          onclick="selectColor(this)"
+        ></div>
+      </div>
+    </div>
   </body>
 </html>
