--- a/index.html
+++ b/index.html
@@ -45,6 +45,31 @@
           data-color="black"
           onclick="selectColor(this)"
         ></div>
+        <div
+          class="color-circle"
+          data-color="blue"
+          onclick="selectColor(this)"
+        ></div>
+        <div
+          class="color-circle"
+          data-color="white"
+          onclick="selectColor(this)"
+        ></div>
+        <div
+          class="color-circle"
+          data-color="green"
+          onclick="selectColor(this)"
+        ></div>
+      </div>
+      <div id="favContainer">
+        <label for="favcolor">Select your favourite color:</label>
+        <input
+          type="color"
+          name="favcolor"
+          id="favcolor"
+          value="#ff0000"
+          onchange="favColor(this)"
+        />
       </div>
     </div>
   </body>
